force-app/main/default/objects/Home_Services_BRD_Process__c/fields/How_will_Delivery_Install_be_set__c.field-meta.xml
<CustomField>
    <fullName>How_will_Delivery_Install_be_set__c</fullName>
    <inlineHelpText>Does the client do the scheduling (i.e. commit a delivery date to the customer), or would they do that through our systems?</inlineHelpText>
    <label>How will Delivery/Install be set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>