force-app/main/default/objects/Home_Services_BRD_Process__c/fields/How_will_we_handle_parts__c.field-meta.xml
<CustomField>
    <fullName>How_will_we_handle_parts__c</fullName>
    <label>How will we handle parts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use existing Sears Process</fullName>
            </value>
            <value>
                <fullName>Client Ships to the Customer</fullName>
            </value>
            <value>
                <fullName>Client Ships to Sears for Fulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>