force-app/main/default/objects/Home_Services_BRD_Process__c/fields/How_will_we_recv_the_order_into_system__c.field-meta.xml
<CustomField>
    <fullName>How_will_we_recv_the_order_into_system__c</fullName>
    <inlineHelpText>How will the order get into our system?</inlineHelpText>
    <label>How will we recv the order into system</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
            <value>
                <fullName>CCN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>