force-app/main/default/objects/Home_Services_BRD_Process__c/fields/If_not_sourced_fill_rate_in_3_days__c.field-meta.xml
<CustomField>
    <fullName>If_not_sourced_fill_rate_in_3_days__c</fullName>
    <inlineHelpText>If the part is not sourced, what is the percent fill rate in 3 days?</inlineHelpText>
    <label>If not sourced, % fill rate in 3 days</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Currently_sourced_by_supply_chain__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>