force-app/main/default/objects/Home_Services_BRD_Process__c/fields/If_OEM_service_parts_info_availability__c.field-meta.xml
<CustomField>
    <fullName>If_OEM_service_parts_info_availability__c</fullName>
    <inlineHelpText>If OEM, do you have service manuals, schematics, and parts list and if not when will we receive them?  If Yes - Client has to provide to Account Manager</inlineHelpText>
    <label>If OEM, service/parts info availability?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>