force-app/main/default/objects/Home_Services_BRD_Process__c/fields/If_Pilot_define_success_criteria__c.field-meta.xml
<CustomField>
    <fullName>If_Pilot_define_success_criteria__c</fullName>
    <inlineHelpText>Define location, duration, and success measurements.</inlineHelpText>
    <label>If Pilot, define success criteria</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>