force-app/main/default/objects/Home_Services_BRD_Process__c/fields/If_retailer_private_label_brands__c.field-meta.xml
<CustomField>
    <fullName>If_retailer_private_label_brands__c</fullName>
    <inlineHelpText>Does the retailer have private label brands? If yes retailer needs to provide manuals, schematics and parts lists</inlineHelpText>
    <label>If retailer, private label brands</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>