force-app/main/default/objects/Home_Services_BRD_Process__c/fields/In_Home__c.field-meta.xml
<CustomField>
    <fullName>In_Home__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>In-Home</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>