force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Install_services_on_behalf_of_retailer__c.field-meta.xml
<CustomField>
    <fullName>Install_services_on_behalf_of_retailer__c</fullName>
    <inlineHelpText>Is the business client engaging SHC install/repair services on behalf of a consumer customer purchasing from client? (ex. Joe buys from Big Box, SHC installs it)</inlineHelpText>
    <label>Install/services on behalf of retailer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>