force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Is_a_permit_req_d_for_service__c.field-meta.xml
<CustomField>
    <fullName>Is_a_permit_req_d_for_service__c</fullName>
    <label>Is a permit req&#39;d for service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>