force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Is_client_or_customer_setting_service__c.field-meta.xml
<CustomField>
    <fullName>Is_client_or_customer_setting_service__c</fullName>
    <inlineHelpText>Who is contacting the call center for service?</inlineHelpText>
    <label>Is client or customer setting service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Other (explain below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>