force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Is_there_a_deductible__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_deductible__c</fullName>
    <label>Is there a deductible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>