force-app/main/default/objects/Home_Services_BRD_Process__c/fields/IW_Lwn_Grdn_engine_transmission_claims__c.field-meta.xml
<CustomField>
    <fullName>IW_Lwn_Grdn_engine_transmission_claims__c</fullName>
    <inlineHelpText>If the service is IW Lawn and Garden, will the client handle engine and transmission claims?</inlineHelpText>
    <label>IW Lwn/Grdn, engine/transmission claims</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>