force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Merchandise_at_customer_home__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_at_customer_home__c</fullName>
    <label>Merchandise at customer home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>