force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Model_Serial_validation_req_d__c.field-meta.xml
<CustomField>
    <fullName>Model_Serial_validation_req_d__c</fullName>
    <label>zDEL_Model/Serial validation req&#39;d</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>