force-app/main/default/objects/Home_Services_BRD_Process__c/fields/NCC_Unit_Manager__c.field-meta.xml
<CustomField>
    <fullName>NCC_Unit_Manager__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>NCC-Unit Manager</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>