force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Operational_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Operational_Metrics__c</fullName>
    <inlineHelpText>Paste Client Profitability Dashboard Link, if not on dashboard please provide.</inlineHelpText>
    <label>Operational Metrics</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>