force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Opportunity_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Narrative__c</fullName>
    <inlineHelpText>Please provide us with a detailed summary of the opportunity including Major Requirements, Items out of scope, and Assumptions. This is also the section to include any &quot;other&quot; information you may have from any question on the BRD.</inlineHelpText>
    <label>Opportunity Narrative</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>