force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Order_Injection__c.field-meta.xml
<CustomField>
    <fullName>Order_Injection__c</fullName>
    <label>Order Injection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Middleware(Preferred)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>