force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>Parts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>