force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OEM In Warranty</fullName>
            </value>
            <value>
                <fullName>Client Service Contract</fullName>
            </value>
            <value>
                <fullName>Client Paid Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Customer Paid Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>