force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Pieces_per_stop__c.field-meta.xml
<CustomField>
    <fullName>Pieces_per_stop__c</fullName>
    <label>Pieces per stop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>More than 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>