force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Pilot_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Specifics__c</fullName>
    <label>Pilot Specifics</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Expected_Rollout__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Specific Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>