force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Pre_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for BRDs that have been pre-approved by the NCM during weekly calls. If the box is checked, Internal Approval via DocuSign is NOT needed.</description>
    <inlineHelpText>NCM: Check this box if a BRD has been approved during weekly call. If so, Internal Approval via DocuSign is NOT needed.</inlineHelpText>
    <label>Pre-Approved</label>
    <type>Checkbox</type>
</CustomField>