force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Pre_call_their_customers__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_their_customers__c</fullName>
    <label>Pre call their customers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>