force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Previous_and_or_expected_profitability__c.field-meta.xml
<CustomField>
    <fullName>Previous_and_or_expected_profitability__c</fullName>
    <label>zDEL_Previous and/or expected profit</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>