force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Previous_profitability_per_call__c.field-meta.xml
<CustomField>
    <fullName>Previous_profitability_per_call__c</fullName>
    <description>Should pull in from Financial System in the future</description>
    <label>Previous profitability per call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>