force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Process_changes_if_renewal__c.field-meta.xml
<CustomField>
    <fullName>Process_changes_if_renewal__c</fullName>
    <label>Process changes if renewal</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>