force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Product_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Product_Engineering__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>Product Engineering</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>