force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Product_entitlement_required__c.field-meta.xml
<CustomField>
    <fullName>Product_entitlement_required__c</fullName>
    <inlineHelpText>Is product model number and warranty information validation required before service is set?</inlineHelpText>
    <label>Product entitlement required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>