force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Product_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Product_Impacted__c</fullName>
    <inlineHelpText>What product was impact? Product line? Brand name? Year manufactured? Etc.</inlineHelpText>
    <label>Product Impacted</label>
    <type>TextArea</type>
</CustomField>