force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <label>Products / Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioners</fullName>
            </value>
            <value>
                <fullName>Business to Business Paid Service</fullName>
            </value>
            <value>
                <fullName>Carry-in Repair</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Commercial Fitness</fullName>
            </value>
            <value>
                <fullName>Commercial Mattresses</fullName>
            </value>
            <value>
                <fullName>Commercial Parts</fullName>
            </value>
            <value>
                <fullName>Commercial TVs</fullName>
            </value>
            <value>
                <fullName>Cook-top</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Dryer</fullName>
            </value>
            <value>
                <fullName>Fitness Equipment</fullName>
            </value>
            <value>
                <fullName>Floor Care</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Gift Cards</fullName>
            </value>
            <value>
                <fullName>Haul-Away</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>In-Home Repair</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Lawn &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Major Appliances</fullName>
            </value>
            <value>
                <fullName>Mattresses</fullName>
            </value>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Warranty Repair</fullName>
            </value>
            <value>
                <fullName>PA &amp; Warranty</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Product Refurbishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>