force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Projected_CPSC_announced_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_CPSC_announced_Date__c</fullName>
    <inlineHelpText>Consumer Product Safety Commission</inlineHelpText>
    <label>Projected CPSC announced Date</label>
    <type>Date</type>
</CustomField>