force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Provide_claims_contact__c.field-meta.xml
<CustomField>
    <fullName>Provide_claims_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provide claims contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Home_Services_BRD_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>