force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Recall_or_Rework__c.field-meta.xml
<CustomField>
    <fullName>Recall_or_Rework__c</fullName>
    <label>Recall or Rework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>