force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Referral_Fee_or_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_or_Rebate__c</fullName>
    <label>Referral Fee or Rebate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Fee</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>