force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Referral_Fee_Rebate_Language__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Rebate_Language__c</fullName>
    <inlineHelpText>Enter the estimated terms if a Referral Fee or Rebate will be offered.</inlineHelpText>
    <label>Referral Fee/Rebate Language</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>