force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Refurbished_Rebuilt_Parts_No_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Refurbished_Rebuilt_Parts_No_Warranty__c</fullName>
    <label>Refurbished/Rebuilt Parts No Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>