force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Relocate_product__c.field-meta.xml
<CustomField>
    <fullName>Relocate_product__c</fullName>
    <label>Relocate product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>