force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>&quot;Whirlpool, LG, and GE require all IW calls to be created by them – Sears/A&amp;E cannot create IW calls for those OEMs – Please ensure you discuss with your potential clients.&quot;</defaultValue>
    <label>Reminder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>