force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Repair_Call_Center_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>Repair_Call_Center_Support_Requested__c</fullName>
    <inlineHelpText>Std–SPI Client
Std Plus 1–Client Inbound Create
Std Plus 2–Consumer Inbound Create
Premium–Triage, Inbound Create
Email Dispatch–Client Inbound Email, Outbound Create
Store Stock Only–Offline create
Note: All inquiries are inbound phone</inlineHelpText>
    <label>Repair Call Center Support Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Plus 1</fullName>
            </value>
            <value>
                <fullName>Standard Plus 2</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Email Dispatch</fullName>
            </value>
            <value>
                <fullName>Store Stock Only</fullName>
            </value>
            <value>
                <fullName>Rework – Custom</fullName>
            </value>
            <value>
                <fullName>Repair – Custom</fullName>
            </value>
            <value>
                <fullName>Del/Inst  – Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>