force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Repair_Only__c.field-meta.xml
<CustomField>
    <fullName>Repair_Only__c</fullName>
    <label>Repair Only</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>