force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Revenue_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Sharing__c</fullName>
    <inlineHelpText>Does the Client want to be compensated for sending OOW Calls?</inlineHelpText>
    <label>Revenue Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>