force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Service_level_requests__c.field-meta.xml
<CustomField>
    <fullName>Service_level_requests__c</fullName>
    <inlineHelpText>Does the client have required service levels (cycle time, trips per repair, etc.)</inlineHelpText>
    <label>Service level requests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>