force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Service_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Service_Recovery__c</fullName>
    <inlineHelpText>If the product is damaged, how is it handled?</inlineHelpText>
    <label>Service Recovery</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>