force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Service_requirements__c.field-meta.xml
<CustomField>
    <fullName>Service_requirements__c</fullName>
    <inlineHelpText>Next day, within 3 days, etc.</inlineHelpText>
    <label>zDEL_Service requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>