force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Special_billing_requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_billing_requirements__c</fullName>
    <inlineHelpText>Please indicate any specific special billing requirements.</inlineHelpText>
    <label>Special billing requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>