force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Special_reporting_requests__c.field-meta.xml
<CustomField>
    <fullName>Special_reporting_requests__c</fullName>
    <inlineHelpText>Is there any mandatory reporting requested by the client?</inlineHelpText>
    <label>Special reporting requests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>