force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Special_service_approval_requests__c.field-meta.xml
<CustomField>
    <fullName>Special_service_approval_requests__c</fullName>
    <inlineHelpText>Do you need a PO, dispatch number, service number? Does the tech have to call for a particular reason?</inlineHelpText>
    <label>Special service approval requests</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>