force-app/main/default/objects/Home_Services_BRD_Process__c/fields/System_issues_notification_contact__c.field-meta.xml
<CustomField>
    <fullName>System_issues_notification_contact__c</fullName>
    <inlineHelpText>Who do we contact if there are systems issues internal to A&amp;E or Sears.</inlineHelpText>
    <label>zDEL_System issues notification contact</label>
    <type>TextArea</type>
</CustomField>