force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Target_market_location__c.field-meta.xml
<CustomField>
    <fullName>Target_market_location__c</fullName>
    <inlineHelpText>Please provide a list of specific zip codes.</inlineHelpText>
    <label>Target market location?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>