force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Target_Rework_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Rework_Start_Date__c</fullName>
    <label>Target Rework Start Date</label>
    <type>Date</type>
</CustomField>