force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Total_Call_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Call_Volume__c</fullName>
    <formula>Call_Volume_Current_Fiscal__c +  Call_Volume_Next_Fiscal__c</formula>
    <label>Total Call Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>