force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Total_units_effected__c.field-meta.xml
<CustomField>
    <fullName>Total_units_effected__c</fullName>
    <label>Total # units effected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>